# rss-reader

./: .env  .env.example  .gitignore  Dockerfile  EXAMPLE.ENV  celerybeat-schedule.db  docker-compose.yaml  main.py  makefile  pyproject.toml  pytest.ini  readme.md  settings.py
alembic/: env.py
alembic/versions/: c6cb2fcb3fcb_.py
app/: model_helpers.py  models.py  schemas.py  security.py  tasks.py  utils.py
init-db/: init-multiple-dbs.sh
tests/: conftest.py  mock_data.py  test_data.py  test_main.py  test_main_feed.py  test_main_user_auth.py  test_model_helpers.py
