[tool.poetry]
name = "rss-reader"
version = "0.1.0"
description = ""
authors = ["burkay <bpehlivan235@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
feedparser = "^6.0.11"
sqlmodel = "^0.0.16"
validators = "^0.22.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
