[tool.poetry]
name = "rss-reader"
version = "0.1.0"
description = ""
authors = ["burkay <bpehlivan235@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
feedparser = "^6.0.11"
sqlmodel = "^0.0.16"
validators = "^0.22.0"
email-validator = "^2.1.0.post1"
pytest = "^8.0.1"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
